# decision-matrix-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  ORCHESTRATOR_REFACTORING_DESIGN.md  README.md  SECURITY.md  debug_lru.py  docker-compose.yml  env.example  minimal_server.py  pyproject.toml  pytest.ini  requirements-dev.txt  run.sh  test_direct_import.py  test_memory_fix.py  test_one_tool.py  test_simple.py  trace_minimal.py
.claude/: TRANSFORMATION_SUCCESS.md  security-audit-http-transport.md
.claude/agents/: README.md  decision-performance-optimizer.md  llm-resilience-engineer.md  mcp-docs-generator.md  mcp-integration-tester.md  mcp-security-auditor.md
.claude/signoffs/: FINAL_OSS_ASSESSMENT_REPORT.json  architect-assessment.json  code-reviewer.json  dependency-paranoid.json  dx-auditor.json  identity-sanitizer.json  oss-readiness-emergency-abort.json  oss-readiness.json  preflight-check.json  tech-debt-final-assessment.json  tech-debt-success.json  tech-debt.json  trust-reputation.json  truth-verifier.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  code-quality.yml  release.yml
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  error-handling.md  performance.md
docs/architecture/: ADR-001-backend-strategy-pattern.md  ADR-002-service-layer-architecture.md  README.md  template.md
src/decision_matrix_mcp/: __init__.py  __main__.py  bedrock_helpers.py  constants.py  convergence.py  error_middleware.py  exceptions.py  formatting.py  helpers.py  models.py  ollama_helpers.py  orchestrator.py  reasoning_orchestrator.py  response_schemas.py  session_manager.py  validation_decorators.py
src/decision_matrix_mcp/backends/: __init__.py  base.py  bedrock.py  defensive.py  factory.py  litellm.py  ollama.py
src/decision_matrix_mcp/config/: __init__.py  defaults.py  manager.py  schema.py  validation.py
src/decision_matrix_mcp/dependency_injection/: __init__.py  container.py
src/decision_matrix_mcp/services/: __init__.py  decision_service.py  response_service.py  validation_service.py
src/decision_matrix_mcp/transports/: http_server.py
tests/: README.md  conftest.py  test_backend_defensive.py  test_backend_factory.py  test_backends.py  test_bedrock_connectivity.py  test_bug_fix_validation.py  test_cached_property_bug_fix.py  test_configuration.py  test_critical_fixes.py  test_decision_matrix.py  test_defensive_parsing.py  test_final_coverage.py  test_formatting.py  test_helpers_comprehensive.py  test_init_additional.py  test_init_coverage.py  test_main.py  test_main_module.py  test_memory_leak_fix.py  test_missing_coverage.py  test_models_coverage.py  test_models_extended.py  test_orchestrator.py  test_orchestrator_additional.py  test_orchestrator_coverage.py  test_orchestrator_error_handling.py  test_performance_optimization.py  test_remaining_coverage.py  test_resource_cleanup.py  test_response_parser.py  test_server_handlers.py  test_server_handlers_formatted.py  test_services.py  test_session_creation_cached_property_fix.py  test_session_defensive.py  test_session_manager_coverage.py  test_session_manager_extended.py  test_session_ttl.py  test_structured_response_parsing.py  (+3 more)
tests/integration/: __init__.py  test_backend_integration.py  test_concurrent_sessions.py  test_http_transport.py  test_mcp_protocol.py
tests/performance/: __init__.py  test_backend_performance.py  test_evaluation_performance.py  test_session_performance.py
