[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decision-matrix-mcp"
version = "0.1.0"
description = "MCP server for structured decision analysis using thread orchestration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "decision-analysis", "ai", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.10.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.272",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
decision-matrix = "decision_matrix_mcp:main"

[project.urls]
Homepage = "https://github.com/yourusername/decision-matrix-mcp"
Repository = "https://github.com/yourusername/decision-matrix-mcp.git"
Issues = "https://github.com/yourusername/decision-matrix-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/decision_matrix_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP038", # Use X | Y in isinstance - prefer tuple syntax for consistency
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
line-length = 100

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["litellm.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true
